Switching to JDK18, new benchmark and results